# ProAutoVip

./: .gitignore  CMakeLists.txt  ProAutoVip.pro  ProAutoVip.pro.user.77c3bd8  README.md
autovip_ls/: .gitignore  Body.qml  CMakeLists.txt  Intro.qml  MyElement.qml  SGlobal.qml  autovip_ls.pro  clocksetter.cpp  clocksetter.h  colorcomponents.cpp  colorcomponents.h  cronjobs.cpp  cronjobs.h  images.qrc  initializemng.cpp  initializemng.h  langs.h  main.cpp  main.qml  mediaplayermng.cpp  mediaplayermng.h  nvidiaconnmanager.cpp  nvidiaconnmanager.h  proto.ini  qml.qrc  restarter.cpp  restarter.h  serialmng.cpp  serialmng.h  settings.ini  settingsmanager.cpp  settingsmanager.h  translator.cpp  translator.h  updatecheck.cpp  updatecheck.h  voiceprotohandler.cpp  voiceprotohandler.h  voicerecognitionservice.cpp  voicerecognitionservice.h  (+2 more)
autovip_ls/Components/: AniCogWheel.qml  AniMedia.qml  BasePage.qml  BottomMenu.qml  CSeatCooling.qml  CSeatHeating.qml  CSeatMassage.qml  CalibreButton.qml  CalibreSettingsButton.qml  ColorSlider.qml  CommandInfo.qml  DDate.qml  DVDButton.qml  DigitalClock.qml  FmBtn.qml  FooterButton.qml  InfoOverlay.qml  KumandaMedia.qml  LeftButton.qml  LeftMenu.qml  LeftTextButton.qml  LeftTextMenu.qml  LightButton.qml  LightDial.qml  Logo.qml  MCircle.qml  MediaControls.qml  MediaDirection.qml  MediaPanel.qml  MediaProgress.qml  MicrophoneBtn.qml  RadBtn.qml  RadBtnMenu.qml  RadioModMenu.qml  RadioStationItem.qml  RestartOverlay.qml  RightTextMenu.qml  RoundMouseArea.qml  SettingsMenu.qml  Spinner.qml  (+4 more)
autovip_ls/Pages/: Home.qml
autovip_ls/jcon/: jcon.h  jcon_assert.h  json_rpc_client.cpp  json_rpc_client.h  json_rpc_debug_logger.cpp  json_rpc_debug_logger.h  json_rpc_endpoint.cpp  json_rpc_endpoint.h  json_rpc_error.cpp  (+27 more)
(+139 files in other folders)
